tests/_resources/error_gcns/E016_component_outside_block.gcn
# Component identities used outside of a block
identities {
    Y[] = C[] + I[];
};
